- NEW: ability to turn off transitivity at configuration level (IVY-103) (thanks to Karl Baum)
- NEW: adding to SPECIAL_MEANINGS in LatestRevisionStrategy (IVY-121)
- NEW: add possibility to define extra attributes in ivy files (IVY-217)
- NEW: Enhance standalone mode to execute java program by creating classloader of dependant jars from cache (IVY-210) (thanks to Peter Hayes)
- NEW: Addition of Vfs Resolver which uses Commons-Vfs to resolve files (IVY-128) (thanks to Glen Marchesani, Matt Inger and Stephen Nesbitt)
- NEW: "this" symbol for configuration mappings (IVY-183) (thanks to Karl Baum)
- NEW: Always update artifacts when revision matches a regex pattern (IVY-189) (thanks to Johan Stuyts)
- NEW: Provide Ant task for generating report about artifacts depended upon (IVY-194) (thanks to Johan Stuyts)

- IMPROVE: ivy standalone now return error status (IVY-152)
- IMPROVE: performances improved (IVY-187) (thanks to Karl Baum)
- IMPROVE: Change default cache artifact pattern to handle missing extension (IVY-196) (thanks to Johan Stuyts)
- IMPROVE: Log messages do not display most specfic resolver name (IVY-170)

- FIX: specifying a defaultconfmapping adds dependencies of each unlisted configuration (IVY-214) (thanks to Maarten Coene)
- FIX: Ivy fails when downloading from a server that supports NTLM authentication (IVY-213) (thanks to Damon Rand)
- FIX: problem with cache and returnFirst (IVY-207)
- FIX: modules splitted across a chain are not handled correctly (IVY-206)
- FIX: Delivered Ivy files with incomplete last line. (IVY-125) (thanks to Matthias Kilian)

   version 1.3.1 - 2006-03-30
===============================
- FIX: retrieval of multiple artifacts in different configurations does not work as expected (IVY-188)
- FIX: configuration http url include doesn't work with commons http client (IVY-203)
- FIX: problem with conflict resolution in transitive dependencies (IVY-199)