@@ -793,6 +793,10 @@ specifier|private
 name|Namespace
 name|_namespace
 decl_stmt|;
+specifier|private
+name|boolean
+name|_mappingOverride
+decl_stmt|;
 specifier|public
 name|DefaultModuleDescriptor
 parameter_list|(
@@ -2087,6 +2091,28 @@ throw|;
 block|}
 block|}
 block|}
+block|}
+specifier|public
+name|void
+name|setMappingOverride
+parameter_list|(
+name|boolean
+name|override
+parameter_list|)
+block|{
+name|_mappingOverride
+operator|=
+name|override
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isMappingOverride
+parameter_list|()
+block|{
+return|return
+name|_mappingOverride
+return|;
 block|}
 block|}
 end_class
