@@ -61,6 +61,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Date
 import|;
 end_import
@@ -71,7 +81,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 
@@ -110,6 +140,18 @@ operator|.
 name|helpers
 operator|.
 name|DefaultHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Configuration
 import|;
 end_import
 
@@ -182,6 +224,20 @@ operator|.
 name|ivy
 operator|.
 name|ModuleRevisionId
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Configuration
+operator|.
+name|Visibility
 import|;
 end_import
 
@@ -457,6 +513,31 @@ argument_list|(
 literal|";"
 argument_list|)
 decl_stmt|;
+name|parseDepsConfs
+argument_list|(
+name|conf
+argument_list|,
+name|dd
+argument_list|,
+name|useDefaultMappingToGuessRightOperande
+argument_list|)
+expr_stmt|;
+block|}
+specifier|protected
+name|void
+name|parseDepsConfs
+parameter_list|(
+name|String
+index|[]
+name|conf
+parameter_list|,
+name|DefaultDependencyDescriptor
+name|dd
+parameter_list|,
+name|boolean
+name|useDefaultMappingToGuessRightOperande
+parameter_list|)
+block|{
 for|for
 control|(
 name|int
@@ -784,6 +865,240 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+if|if
+condition|(
+name|_md
+operator|.
+name|isMappingOverride
+argument_list|()
+condition|)
+block|{
+name|addExtendingConfigurations
+argument_list|(
+name|conf
+argument_list|,
+name|dd
+argument_list|,
+name|useDefaultMappingToGuessRightOperande
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|addExtendingConfigurations
+parameter_list|(
+name|String
+index|[]
+name|confs
+parameter_list|,
+name|DefaultDependencyDescriptor
+name|dd
+parameter_list|,
+name|boolean
+name|useDefaultMappingToGuessRightOperande
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|addExtendingConfigurations
+argument_list|(
+name|confs
+index|[
+name|i
+index|]
+argument_list|,
+name|dd
+argument_list|,
+name|useDefaultMappingToGuessRightOperande
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|addExtendingConfigurations
+parameter_list|(
+name|String
+name|conf
+parameter_list|,
+name|DefaultDependencyDescriptor
+name|dd
+parameter_list|,
+name|boolean
+name|useDefaultMappingToGuessRightOperande
+parameter_list|)
+block|{
+name|Set
+name|configsToAdd
+init|=
+operator|new
+name|HashSet
+argument_list|()
+decl_stmt|;
+name|Configuration
+index|[]
+name|configs
+init|=
+name|_md
+operator|.
+name|getConfigurations
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|configs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+index|[]
+name|ext
+init|=
+name|configs
+index|[
+name|i
+index|]
+operator|.
+name|getExtends
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+name|ext
+operator|.
+name|length
+condition|;
+name|j
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|conf
+operator|.
+name|equals
+argument_list|(
+name|ext
+index|[
+name|j
+index|]
+argument_list|)
+condition|)
+block|{
+name|String
+name|configName
+init|=
+name|configs
+index|[
+name|i
+index|]
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|getDefaultConfMappingDescriptor
+argument_list|()
+operator|.
+name|getDependencyConfigurations
+argument_list|(
+name|configName
+argument_list|)
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|configsToAdd
+operator|.
+name|add
+argument_list|(
+name|configName
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|addExtendingConfigurations
+argument_list|(
+name|configName
+argument_list|,
+name|dd
+argument_list|,
+name|useDefaultMappingToGuessRightOperande
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
+name|String
+index|[]
+name|confs
+init|=
+operator|(
+name|String
+index|[]
+operator|)
+name|configsToAdd
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|String
+index|[
+name|configsToAdd
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+decl_stmt|;
+name|parseDepsConfs
+argument_list|(
+name|confs
+argument_list|,
+name|dd
+argument_list|,
+name|useDefaultMappingToGuessRightOperande
+argument_list|)
+expr_stmt|;
 block|}
 specifier|protected
 name|DependencyDescriptor
