@@ -1476,6 +1476,31 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|_md
+operator|.
+name|setMappingOverride
+argument_list|(
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+literal|"confmappingoverride"
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 if|else if
 condition|(
