@@ -12327,6 +12327,76 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testIVY218
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+name|ResolveTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivy-218.xml"
+argument_list|)
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Number of artifacts not correct"
+argument_list|,
+literal|3
+argument_list|,
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"test"
+argument_list|)
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testCircular
 parameter_list|()
 throws|throws
