@@ -1,0 +1,12 @@
+<ivy-module version="1.0">
+	<info organisation="test" module="IVY-218" status="integration" publication="20050202110000"/>
+	<configurations defaultconfmapping="compile-&gt;A;test-&gt;B" confmappingoverride="true">
+		<conf name="compile"/>
+		<conf name="runtime" extends="compile"/>
+		<conf name="test" extends="runtime"/>
+	</configurations>
+	<dependencies>
+		<dependency org="org5" name="mod5.1" rev="4.2" force="true" conf="compile" transitive="false"/>
+		<dependency org="org3" name="mod3.2" rev="1+" conf="test-&gt;default" transitive="false"/>
+	</dependencies>
+</ivy-module>
